[project]
name = "pywiki"
version = "2.0.0"
description = "Pywiki — AI Personal Assistant (Streamlit Edition)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.35.0",
    "requests>=2.32.0",
    "wikipedia>=1.4.0",
    "wolframalpha>=5.0.0",
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10.4",
    "pyaudio>=0.2.14",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
